# business_magnet

./: .env.example  .gitignore  README.md  agent.py  agent_core.py  discord_bot.py  docker-compose.yml  pyproject.toml  requirements.txt  watch-restart.sh  whatsapp_bot.py  whatsapp_bridge.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  scorecard.yml  security.yml
agent_core/: __init__.py  bridge.py
deploy/systemd/: trading-auto-scan.service  trading-auto-scan.timer  trading-openclaw-backup.service  trading-openclaw-backup.timer
docs/decisions/: agent-souls-and-memory.md  auto-trading.md  openclaw-migration.md
prompts/: auto_scan_prompt.md  sonic_soul.md  supersonic_soul.md
templates/: analysis_card.html  cost_dashboard.html
tools/: auto_scan.py  confirm.py  cost_dashboard.py  cost_log.py  cost_rollup.py  imagegen.py  imagegen_rich.py  market_data.py  memory.py  openclaw_backup.sh  options.py  search.py  ticker_feeds.py  trading.py
