[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_core"
version = "0.1.0"
description = "Reusable framework for Claude agents on WhatsApp and Discord."
requires-python = ">=3.12"
authors = [{ name = "Eswar Moorthy" }]
readme = "README.md"
license = { text = "Proprietary" }
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "discord.py>=2.4.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.6",
    "playwright>=1.50.0",
]

[tool.setuptools.packages.find]
include = ["agent_core*"]

[tool.setuptools.package-data]
agent_core = ["templates/*.html"]
